🐛 fix(preference): correctifs mode contrasté et reduce motion [DS-3773] (#952)
- corrections diverses sur le mode contrasté

--- a/src/component/summary/style/_module.scss
+++ b/src/component/summary/style/_module.scss
@@ -44,6 +44,11 @@
       font-weight: bold;
     }
 
+    @include preference.forced-colors {
+      text-decoration: underline;
+      text-underline-offset: 5px;
+    }
+
     &:not(:hover):not(:active) {
       @include link-underline-hover-only;
     }
